﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
! v9.0.0:
~~~~~~~~~

* Common changes
================
* Referencing KGySoft.Drawing.Core v9.0.0, which enables direct shape drawing, and improves the performance of
  accessing IReadWriteBitmapData instances.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt

! KGySoft.Drawing.Wpf namespace
===============================
! BitmapSourceExtensions class:
  ! GetReadableBitmapData overloads:
    ! This method always created a copy of the source BitmapSource. From now on, if the source is a WriteableBitmap,
      the returned IReadableBitmapData will be a view on the actual source data. This prevents unnecessary copying,
      but it also keeps the source WriteableBitmap locked until the returned bitmap data is disposed.
    - Fixing buffer size check for very large images. Please note that it could be fixed only partially here because
      WPF also needs to be fixed: https://github.com/dotnet/wpf/issues/9438


~~~~~~~~~
* v8.1.0:
~~~~~~~~~

* Common changes
================
* Referencing KGySoft.Drawing.Core v8.1.0, which improves performance, especially regarding Palette operations,
  optimized quantizers and vector operations.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt


~~~~~~~~~
! v8.0.0:
~~~~~~~~~

! KGySoft.Drawing.Wpf namespace
===============================
! PixelFormatExtensions class:
  ! GetInfo method: The new Prefers128BitColors or Prefers64BitColors property is now set for some pixel formats.
  ! ToKnownPixelFormat method: The result can be one of the new known pixel formats of v8.0.0.
  + ToPixelFormat method: Supporting the new KnownPixelFormat values of v8.0.0
+ ColorExtensions class: