@@ -46,7 +46,7 @@
 
   <!-- Release only package references -->
   <ItemGroup Condition="'$(Configuration)' == 'RELEASE'">
-    <PackageReference Include="KGySoft.Drawing.Core" Version="9.0.0-rc.1" />
+    <PackageReference Include="KGySoft.Drawing.Core" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
