@@ -106,14 +106,14 @@ namespace KGySoft.Drawing.Wpf
         /// <br/>Default value: <c>128</c>.</param>
         /// <returns>A <see cref="PredefinedColorsQuantizer"/> instance that is compatible with the specified <paramref name="pixelFormat"/>.</returns>
         public static PredefinedColorsQuantizer GetMatchingQuantizer(this PixelFormat pixelFormat, Color backColor = default, byte alphaThreshold = 128)
-            => (pixelFormat == PixelFormats.BlackWhite ? PredefinedColorsQuantizer.BlackAndWhite(backColor.ToColor32())
-                : pixelFormat == PixelFormats.Gray2 ? PredefinedColorsQuantizer.Grayscale4(backColor.ToColor32())
-                : pixelFormat == PixelFormats.Gray4 ? PredefinedColorsQuantizer.Grayscale16(backColor.ToColor32())
-                : pixelFormat == PixelFormats.Indexed1 ? PredefinedColorsQuantizer.SystemDefault1BppPalette(backColor.ToColor32())
+            => (pixelFormat == PixelFormats.BlackWhite ? PredefinedColorsQuantizer.BlackAndWhite(backColor.ToColor32(), alphaThreshold)
+                : pixelFormat == PixelFormats.Gray2 ? PredefinedColorsQuantizer.Grayscale4(backColor.ToColor32(), false, alphaThreshold)
+                : pixelFormat == PixelFormats.Gray4 ? PredefinedColorsQuantizer.Grayscale16(backColor.ToColor32(), false, alphaThreshold)
+                : pixelFormat == PixelFormats.Indexed1 ? PredefinedColorsQuantizer.SystemDefault1BppPalette(backColor.ToColor32(), alphaThreshold)
                 : pixelFormat == PixelFormats.Indexed2 ? PredefinedColorsQuantizer.FromCustomPalette(new Palette(indexedDefault2BppPalette, backColor.ToColor32(), alphaThreshold))
-                : pixelFormat == PixelFormats.Indexed4 ? PredefinedColorsQuantizer.SystemDefault4BppPalette(backColor.ToColor32())
+                : pixelFormat == PixelFormats.Indexed4 ? PredefinedColorsQuantizer.SystemDefault4BppPalette(backColor.ToColor32(), alphaThreshold)
                 : pixelFormat == PixelFormats.Indexed8 ? PredefinedColorsQuantizer.SystemDefault8BppPalette(backColor.ToColor32(), alphaThreshold)
-                : pixelFormat.In(PixelFormats.Gray8, PixelFormats.Gray16, PixelFormats.Gray32Float) ? PredefinedColorsQuantizer.Grayscale(backColor.ToColor32())
+                : pixelFormat.In(PixelFormats.Gray8, PixelFormats.Gray16, PixelFormats.Gray32Float) ? PredefinedColorsQuantizer.Grayscale(backColor.ToColor32(), alphaThreshold)
                 : PredefinedColorsQuantizer.FromPixelFormat(pixelFormat.ToKnownPixelFormat(), backColor.ToColor32(), alphaThreshold))
                 .ConfigureColorSpace(pixelFormat.HasLinearGamma() ? WorkingColorSpace.Linear : WorkingColorSpace.Default);
 
